--- a/index.html
+++ b/index.html
@@ -8,44 +8,41 @@
   
   <title>Frontend Mentor | 3-column preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./css/main.css">
+
+ 
 </head>
 <body>
   <div class="container">
     <div class="sedans-card">
       <img src="./images/icon-sedans.svg" alt="" class="sedans-hero">
-      <h2>Sedans</h2>
+      <h1>Sedans</h1>
       <p> Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
         or on your next road trip.</p>
-      <button>Learn More</button>
+      <button class="learn-more">Learn More</button>
     </div>
 
     <div class="suvs-card">
       <img src="./images/icon-suvs.svg" alt="" class="suvs-hero">
-      <h2>Suvs</h2>
+      <h1>Suvs</h1>
       <p> Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
         and off-road adventures.</p>
-      <button>Learn More</button>
+      <button class="learn-more">Learn More</button>
     </div>
 
     <div class="luxury-card">
       <img src="./images/icon-luxury.svg" alt="" class="luxury-hero">
-      <h2>Luxury</h2>
+      <h1>Luxury</h1>
       <p> Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
         rental and arrive in style.</p>
-      <button>Learn More</button>
+      <button class="learn-more">Learn More</button>
     </div>
 
   </div>
   
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Catherine</a>.
   </div>
 </body>
 </html>
