--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <div class="sedans-card">
-      <img src="./images/icon-sedans.svg" alt="" class="sedans-hero">
+      <img src="./images/icon-sedans.svg" alt="" aria-hidden="true" class="sedans-hero">
       <h1>Sedans</h1>
       <p> Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
         or on your next road trip.</p>
@@ -23,7 +23,7 @@
     </div>
 
     <div class="suvs-card">
-      <img src="./images/icon-suvs.svg" alt="" class="suvs-hero">
+      <img src="./images/icon-suvs.svg" alt="" aria-hidden="true" class="suvs-hero">
       <h1>Suvs</h1>
       <p> Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
         and off-road adventures.</p>
@@ -31,7 +31,7 @@
     </div>
 
     <div class="luxury-card">
-      <img src="./images/icon-luxury.svg" alt="" class="luxury-hero">
+      <img src="./images/icon-luxury.svg" alt="" aria-hidden="true" class="luxury-hero">
       <h1>Luxury</h1>
       <p> Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
         rental and arrive in style.</p>
